Config compiles